test/type/wrong/higherrank1.kk
val ids = [id : forall<a> a -> a]

fun wrong(x) {
  choose(x,ids)
}